@@ -1,4 +1,5 @@
 package org.mifosplatform.cms.media.api;
+
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -25,8 +26,6 @@ import org.mifosplatform.cms.media.data.MediaassetAttribute;
 import org.mifosplatform.cms.media.data.MediaassetAttributeData;
 import org.mifosplatform.cms.media.service.MediaAssetReadPlatformService;
 import org.mifosplatform.cms.mediadetails.data.MediaLocationData;
-import org.mifosplatform.cms.mediadevice.data.MediaDeviceData;
-import org.mifosplatform.cms.mediadevice.service.MediaDeviceReadPlatformService;
 import org.mifosplatform.commands.domain.CommandWrapper;
 import org.mifosplatform.commands.service.CommandWrapperBuilder;
 import org.mifosplatform.commands.service.PortfolioCommandSourceWritePlatformService;
@@ -61,21 +60,19 @@ public class MediaAssestApiResource {
 	private final ApiRequestParameterHelper apiRequestParameterHelper;
 	private final PortfolioCommandSourceWritePlatformService commandsSourceWritePlatformService;
 	private final MediaAssetReadPlatformService mediaAssetReadPlatformService;
-	private final MediaDeviceReadPlatformService deviceReadPlatformService;
 	private final MCodeReadPlatformService mCodeReadPlatformService;
 	
 	private final PlanReadPlatformService planReadPlatformService;
 	 @Autowired
 	    public MediaAssestApiResource(final PlatformSecurityContext context, final DefaultToApiJsonSerializer<MediaAssetData> toApiJsonSerializer,
 	    final ApiRequestParameterHelper apiRequestParameterHelper,final PortfolioCommandSourceWritePlatformService commandsSourceWritePlatformService,
-	    final MediaAssetReadPlatformService mediaAssetReadPlatformService,final MediaDeviceReadPlatformService deviceReadPlatformService,
-	    final PlanReadPlatformService planReadPlatformService,final MCodeReadPlatformService mCodeReadPlatformService) {
+	    final MediaAssetReadPlatformService mediaAssetReadPlatformService,final PlanReadPlatformService planReadPlatformService,
+	    final MCodeReadPlatformService mCodeReadPlatformService) {
 		        this.context = context;
 		        this.toApiJsonSerializer = toApiJsonSerializer;
 		        this.apiRequestParameterHelper = apiRequestParameterHelper;
 		        this.commandsSourceWritePlatformService = commandsSourceWritePlatformService;
 		        this.mediaAssetReadPlatformService=mediaAssetReadPlatformService;
-		        this.deviceReadPlatformService=deviceReadPlatformService;
 		        this.planReadPlatformService=planReadPlatformService;
 		        this.mCodeReadPlatformService=mCodeReadPlatformService;
 		    }	
@@ -86,26 +83,26 @@ public class MediaAssestApiResource {
 	@Consumes({ MediaType.APPLICATION_JSON })
 	@Produces({ MediaType.APPLICATION_JSON })
 	public String retrieveMediaAssestdata(@QueryParam("deviceId") final String deviceId, @QueryParam("pageNo")  Long pageNum,
-			@QueryParam("filterType") final String filterType,@QueryParam("clientType") final String clientType, @Context final UriInfo uriInfo) {
+			@QueryParam("filterType") final String filterType, @QueryParam("clientType") final String clientType, @Context final UriInfo uriInfo) {
 		
           context.authenticatedUser().validateHasReadPermission(resourceNameForPermissions);
         //  MediaDeviceData details=this.deviceReadPlatformService.retrieveDeviceDetails(deviceId);
-            Long pageNo=new Long(0);
-            Long noOfPages=new Long(0);
-            if(pageNum == null || pageNum == 0){
-        	  pageNum=new Long(0);
-           }else{
-              pageNo=(pageNum*10);
+          Long pageNo = Long.valueOf(0);
+          Long noOfPages = Long.valueOf(0);
+          if(pageNum == null || pageNum == 0){
+        	  pageNum = Long.valueOf(0);
+          }else{
+        	  pageNo = (pageNum * 10);
           }
-            List<MediaAssetData> data=new ArrayList<MediaAssetData>();
-           if(filterType.equalsIgnoreCase("ALL")){
+          List<MediaAssetData> data = new ArrayList<MediaAssetData>();
+          if("ALL".equalsIgnoreCase(filterType)){
         	   
-        	   data = this.mediaAssetReadPlatformService.retrievemediaAssetdata(pageNo,clientType);
+        	  data = this.mediaAssetReadPlatformService.retrievemediaAssetdata(pageNo,clientType);
         	   
-        	   final String queryFOrPages=" SELECT count(0)  FROM b_media_asset m inner join b_event_detail ed on ed.media_id = m.id"
+        	  final String queryFOrPages = " SELECT count(0)  FROM b_media_asset m inner join b_event_detail ed on ed.media_id = m.id"
 			                   +" inner join b_event_master em on em.id = ed.event_id  GROUP BY m.id  having  count( ed.media_id) = 1 ";
-         	   noOfPages=this.mediaAssetReadPlatformService.retrieveNoofPages(queryFOrPages);
-         	  for(MediaAssetData assetData:data){
+         	  noOfPages = this.mediaAssetReadPlatformService.retrieveNoofPages(queryFOrPages);
+         	  for(final MediaAssetData assetData:data){
          		  
          		 // List<MediaLocationData> locationData=this.mediaAssetReadPlatformService.retrievemediaAssetLocationdata(assetData.getMediaId());
          	  }
@@ -113,191 +110,158 @@ public class MediaAssestApiResource {
          	  //data.add(new MediaAssetData(noOfPages,pageNum));
         	  
           }
-          
-          else if(filterType.equalsIgnoreCase("RELEASE")){
+          else if("RELEASE".equalsIgnoreCase(filterType)){
         	  
 		     data = this.mediaAssetReadPlatformService.retrievemediaAssetdatabyNewRealease(pageNo);
-		     final String query=" SELECT count(0) FROM b_media_asset m INNER JOIN b_event_detail ed ON ed.media_id = m.id"
+		     final String query = " SELECT count(0) FROM b_media_asset m INNER JOIN b_event_detail ed ON ed.media_id = m.id"
 		    		 +" INNER JOIN b_event_master em  ON em.id = ed.event_id where m.release_date <= adddate(now(),INTERVAL -3 MONTH)"
 		    		 +" group by m.id  having count(distinct ed.event_id) >=1 ";
 	          noOfPages=this.mediaAssetReadPlatformService.retrieveNoofPages(query);
 	        // data.add(new MediaAssetData(noOfPages,pageNum));
 		     
           }
-          
-          else if(filterType.equalsIgnoreCase("RATING")){
+          else if("RATING".equalsIgnoreCase(filterType)){
         	  
-        	  data=this.mediaAssetReadPlatformService.retrievemediaAssetdatabyRating(pageNo);
-        	  final String query=" SELECT count(0) FROM b_media_asset m INNER JOIN b_event_detail ed ON ed.media_id = m.id"
+        	  data = this.mediaAssetReadPlatformService.retrievemediaAssetdatabyRating(pageNo);
+        	  final String query = " SELECT count(0) FROM b_media_asset m INNER JOIN b_event_detail ed ON ed.media_id = m.id"
         			  +" INNER JOIN b_event_master em ON em.id = ed.event_id group by m.id  having count(distinct ed.event_id) >=1 ";
-	           noOfPages=this.mediaAssetReadPlatformService.retrieveNoofPages(query);
+	           noOfPages = this.mediaAssetReadPlatformService.retrieveNoofPages(query);
 	          //data.add(new MediaAssetData(noOfPages,pageNum));
           }
-          
-          else if(filterType.equalsIgnoreCase("DISCOUNT")){
+          else if("DISCOUNT".equalsIgnoreCase(filterType)){
         	  
-        	  data=this.mediaAssetReadPlatformService.retrievemediaAssetdatabyDiscountedMovies(pageNo);
-        	  final String query=" SELECT count(0) FROM b_media_asset m INNER JOIN b_event_detail ed ON ed.media_id = m.id"
+        	  data = this.mediaAssetReadPlatformService.retrievemediaAssetdatabyDiscountedMovies(pageNo);
+        	  final String query = " SELECT count(0) FROM b_media_asset m INNER JOIN b_event_detail ed ON ed.media_id = m.id"
         			  +" INNER JOIN b_event_master em  ON em.id = ed.event_id inner join  b_event_pricing ep on em.id=ep.event_id"
         			  +" where discount_id>=1  group by m.id  having count(distinct ed.event_id) >=1";
-	           noOfPages=this.mediaAssetReadPlatformService.retrieveNoofPages(query);
+	           noOfPages = this.mediaAssetReadPlatformService.retrieveNoofPages(query);
 	          //data.add(new MediaAssetData(noOfPages,pageNum));
           }
-          
-          else if(filterType.equalsIgnoreCase("PROMOTION")){
+          else if("PROMOTION".equalsIgnoreCase(filterType)){
         	  
-        	  data=this.mediaAssetReadPlatformService.retrievemediaAssetdatabyPromotionalMovies(pageNo);
-        	  final String query=" SELECT count(0)  FROM b_media_asset m inner join b_event_detail ed on ed.media_id = m.id"
+        	  data = this.mediaAssetReadPlatformService.retrievemediaAssetdatabyPromotionalMovies(pageNo);
+        	  final String query = " SELECT count(0)  FROM b_media_asset m inner join b_event_detail ed on ed.media_id = m.id"
 	                   +" inner join b_event_master em on em.id = ed.event_id  group by m.id  having count(distinct ed.event_id) >1 ";
-	           noOfPages=this.mediaAssetReadPlatformService.retrieveNoofPages(query);
+	           noOfPages = this.mediaAssetReadPlatformService.retrieveNoofPages(query);
+	         // data.add(new MediaAssetData(noOfPages,pageNum));
+          } 
+          else if("COMING".equalsIgnoreCase(filterType)){
+        	  
+        	  data = this.mediaAssetReadPlatformService.retrievemediaAssetdatabyComingSoonMovies(pageNo);
+        	  final String query = " SELECT count(0) FROM b_media_asset m where category_id=19 ";
+	           noOfPages = this.mediaAssetReadPlatformService.retrieveNoofPages(query);
 	         // data.add(new MediaAssetData(noOfPages,pageNum));
           }
-          
-          else if(filterType.equalsIgnoreCase("COMING")){
+          else if("WATCHED".equalsIgnoreCase(filterType)){
         	  
-        	  data=this.mediaAssetReadPlatformService.retrievemediaAssetdatabyComingSoonMovies(pageNo);
-        	  final String query=" SELECT count(0) FROM b_media_asset m where category_id=19 ";
-	           noOfPages=this.mediaAssetReadPlatformService.retrieveNoofPages(query);
-	         // data.add(new MediaAssetData(noOfPages,pageNum));
-          }
-          
-          else if(filterType.equalsIgnoreCase("WATCHED")){
-        	  
-        	  data=this.mediaAssetReadPlatformService.retrievemediaAssetdatabyMostWatchedMovies(pageNo);
-        	  final String query="SELECT count(0) FROM b_media_asset m inner join b_event_detail ed on m.id=ed.media_id  inner " +
+        	  data = this.mediaAssetReadPlatformService.retrievemediaAssetdatabyMostWatchedMovies(pageNo);
+        	  final String query = "SELECT count(0) FROM b_media_asset m inner join b_event_detail ed on m.id=ed.media_id  inner " +
         	  		" JOIN b_eventorder eo  ON (eo.event_id = ed.event_id)";
-        	   noOfPages=this.mediaAssetReadPlatformService.retrieveNoofPages(query);
+        	   noOfPages = this.mediaAssetReadPlatformService.retrieveNoofPages(query);
         	//  data.add(new MediaAssetData(noOfPages,pageNum));
-          }
-                    
+          }         
           else {
         	  
-        	  data=this.mediaAssetReadPlatformService.retrievemediaAssetdatabySearching(pageNo,filterType);
-        	  final String query="SELECT count(0) FROM b_media_asset m inner join b_event_detail ed on m.id=ed.media_id  inner " +
+        	  data = this.mediaAssetReadPlatformService.retrievemediaAssetdatabySearching(pageNo,filterType);
+        	  final String query = "SELECT count(0) FROM b_media_asset m inner join b_event_detail ed on m.id=ed.media_id  inner " +
         	  		" JOIN b_eventorder eo  ON (eo.event_id = ed.event_id)";
-        	   noOfPages=this.mediaAssetReadPlatformService.retrieveNoofPages(query);
+        	   noOfPages = this.mediaAssetReadPlatformService.retrieveNoofPages(query);
         	  //data.add(new MediaAssetData(noOfPages,pageNum));
           }
-   	  MediaAssetData mediaAssetData=new MediaAssetData(data,noOfPages, pageNum);
-		final ApiRequestJsonSerializationSettings settings = apiRequestParameterHelper.process(uriInfo.getQueryParameters());
-		return this.toApiJsonSerializer.serialize(settings, mediaAssetData, RESPONSE_DATA_PARAMETERS);
+          final MediaAssetData mediaAssetData = new MediaAssetData(data,noOfPages, pageNum);
+          final ApiRequestJsonSerializationSettings settings = apiRequestParameterHelper.process(uriInfo.getQueryParameters());
+          return this.toApiJsonSerializer.serialize(settings, mediaAssetData, RESPONSE_DATA_PARAMETERS);
 	}
-	
-		
-   @POST
-   @Consumes({ MediaType.APPLICATION_JSON })
-   @Produces({ MediaType.APPLICATION_JSON })
-   public String InsertMediaAssetData(final String apiRequestBodyAsJson) {
-
-   final CommandWrapper commandRequest=new CommandWrapperBuilder().createMediaAsset().withJson(apiRequestBodyAsJson).build();
-   final CommandProcessingResult result=this.commandsSourceWritePlatformService.logCommandSource(commandRequest);
-   return this.toApiJsonSerializer.serialize(result);
-}
-   
+	   
     @GET
     @Path("mediadata")
 	@Consumes({ MediaType.APPLICATION_JSON })
 	@Produces({ MediaType.APPLICATION_JSON })
 	public String retrieveAllMediaAssestdata(@Context final UriInfo uriInfo) {
-         context.authenticatedUser().validateHasReadPermission(resourceNameForPermissions);
-         List<MediaAssetData> data   = this.mediaAssetReadPlatformService.retrieveAllAssetdata();
+        context.authenticatedUser().validateHasReadPermission(resourceNameForPermissions);
+        final List<MediaAssetData> data = this.mediaAssetReadPlatformService.retrieveAllAssetdata();
 		final ApiRequestJsonSerializationSettings settings = apiRequestParameterHelper.process(uriInfo.getQueryParameters());
 		return this.toApiJsonSerializer.serialize(settings, data, RESPONSE_DATA_PARAMETERS);
-		
-		
-
-}
-    
+    }
     
     @GET
     @Path("template")
 	@Consumes({ MediaType.APPLICATION_JSON })
 	@Produces({ MediaType.APPLICATION_JSON })
 	public String retrieveMediaAssestTemplatedata(@Context final UriInfo uriInfo) {
-         context.authenticatedUser().validateHasReadPermission(resourceNameForPermissions);
-         MediaAssetData assetData=handleTEmplateData();
+    	context.authenticatedUser().validateHasReadPermission(resourceNameForPermissions);
+        final MediaAssetData assetData = handleMediaAssestTemplateData();
 		final ApiRequestJsonSerializationSettings settings = apiRequestParameterHelper.process(uriInfo.getQueryParameters());
 		return this.toApiJsonSerializer.serialize(settings, assetData, RESPONSE_DATA_PARAMETERS);
+    }
     
-}
-    
-    private MediaAssetData handleTEmplateData() {
-    	 List<EnumOptionData> status = this.planReadPlatformService.retrieveNewStatus();
-         List<MediaassetAttribute> data   = this.mediaAssetReadPlatformService.retrieveMediaAttributes();
-         List<MediaassetAttribute> mediaFormat=this.mediaAssetReadPlatformService.retrieveMediaFormatType();
-         List<MediaEnumoptionData> mediaTypeData =this.mediaAssetReadPlatformService.retrieveMediaTypeData();
-         Collection<MCodeData> eventCategeorydata=this.mCodeReadPlatformService.getCodeValue("Event Category");
-         List<McodeData> mediaCategeorydata=this.mediaAssetReadPlatformService.retrieveMedaiCategory();
-         List<McodeData> languageCategeory=this.mediaAssetReadPlatformService.retrieveLanguageCategeories();
-         List<McodeData> contentProviderData=this.mediaAssetReadPlatformService.retrieveContentProviders();
-         return new MediaAssetData(null,null,null,status,data,mediaFormat,eventCategeorydata,mediaCategeorydata,languageCategeory,contentProviderData,mediaTypeData);
+    private MediaAssetData handleMediaAssestTemplateData() {
+    	 final List<EnumOptionData> status = this.planReadPlatformService.retrieveNewStatus();
+    	 final List<MediaassetAttribute> data   = this.mediaAssetReadPlatformService.retrieveMediaAttributes();
+    	 final List<MediaassetAttribute> mediaFormat = this.mediaAssetReadPlatformService.retrieveMediaFormatType();
+    	 final List<MediaEnumoptionData> mediaTypeData = this.mediaAssetReadPlatformService.retrieveMediaTypeData();
+    	 final Collection<MCodeData> eventCategeorydata = this.mCodeReadPlatformService.getCodeValue("Event Category");
+    	 final List<McodeData> mediaCategeorydata=this.mediaAssetReadPlatformService.retrieveMedaiCategory();
+    	 final List<McodeData> languageCategeory=this.mediaAssetReadPlatformService.retrieveLanguageCategeories();
+    	 final List<McodeData> contentProviderData=this.mediaAssetReadPlatformService.retrieveContentProviders();
+         return new MediaAssetData(null, null, null, status, data, mediaFormat, eventCategeorydata, mediaCategeorydata, languageCategeory, 
+        		 contentProviderData, mediaTypeData);
 	}
-
-
-	/*@GET
-    @Path("{mediaId}")
-	@Consumes({ MediaType.APPLICATION_JSON })
-	@Produces({ MediaType.APPLICATION_JSON })
-	public String retrieveSingleMediaAssestDetails(@PathParam("mediaId") final Long mediaId,@Context final UriInfo uriInfo) {
-         context.authenticatedUser().validateHasReadPermission(resourceNameForPermissions);
-        
-         MediaAssetData mediaAssetData=this.mediaAssetReadPlatformService.retrievemediaAsset(mediaId);
-         List<EnumOptionData> status = this.planReadPlatformService.retrieveNewStatus();
-         List<MediaassetAttribute> data   = this.mediaAssetReadPlatformService.retrieveMediaAttributes();
-         List<MediaassetAttribute> mediaFormat=this.mediaAssetReadPlatformService.retrieveMediaFormatType();
-         List<MediaEnumoptionData> mediaTypeData =this.mediaAssetReadPlatformService.retrieveMediaTypeData();
-         List<McodeData> mediaCategeorydata=this.mediaAssetReadPlatformService.retrieveMedaiCategory();
-         List<McodeData> languageCategeory=this.mediaAssetReadPlatformService.retrieveLanguageCategeories();
-         MediaAssetData assetData=new MediaAssetData(status,data,mediaFormat,mediaTypeData,mediaCategeorydata,languageCategeory);
-		final ApiRequestJsonSerializationSettings settings = apiRequestParameterHelper.process(uriInfo.getQueryParameters());
-		return this.toApiJsonSerializer.serialize(settings, assetData, RESPONSE_DATA_PARAMETERS);
-		
-}*/
+    
 	@GET
     @Path("{mediaId}")
 	@Consumes({ MediaType.APPLICATION_JSON })
 	@Produces({ MediaType.APPLICATION_JSON })
-	public String retrieveSingleMediaAssestDetails(@PathParam("mediaId") final Long mediaId,@Context final UriInfo uriInfo) {
+	public String retrieveSingleMediaAssestDetails(@PathParam("mediaId") final Long mediaId, @Context final UriInfo uriInfo) {
          context.authenticatedUser().validateHasReadPermission(resourceNameForPermissions);
        
-         MediaAssetData mediaAssetData=this.mediaAssetReadPlatformService.retrievemediaAsset(mediaId);
-         List<MediaassetAttributeData> mediaassetAttributes=this.mediaAssetReadPlatformService.retrieveMediaassetAttributesData(mediaId);
-         List<MediaLocationData> mediaLocationData=this.mediaAssetReadPlatformService.retrievemediaAssetLocationdata(mediaId);
-         List<EnumOptionData> status = this.planReadPlatformService.retrieveNewStatus();
-         List<MediaassetAttribute> data   = this.mediaAssetReadPlatformService.retrieveMediaAttributes();
-         List<MediaassetAttribute> mediaFormat=this.mediaAssetReadPlatformService.retrieveMediaFormatType();
-         List<MediaEnumoptionData> mediaTypeData =this.mediaAssetReadPlatformService.retrieveMediaTypeData();
-         Collection<MCodeData> eventCategeorydata=this.mCodeReadPlatformService.getCodeValue("Event Category");
-         List<McodeData> mediaCategeorydata=this.mediaAssetReadPlatformService.retrieveMedaiCategory();
-         List<McodeData> mediaLanguageData=this.mediaAssetReadPlatformService.retrieveLanguageCategeories();
-         List<McodeData> contentProviderData=this.mediaAssetReadPlatformService.retrieveContentProviders();
-         MediaAssetData assetData=new MediaAssetData(mediaAssetData,mediaassetAttributes,mediaLocationData,status,data,mediaFormat,eventCategeorydata,mediaCategeorydata,mediaLanguageData,contentProviderData,mediaTypeData);
-		final ApiRequestJsonSerializationSettings settings = apiRequestParameterHelper.process(uriInfo.getQueryParameters());
-		return this.toApiJsonSerializer.serialize(settings, assetData, RESPONSE_DATA_PARAMETERS);
-      }
+         final MediaAssetData mediaAssetData = this.mediaAssetReadPlatformService.retrievemediaAsset(mediaId);
+         final List<MediaassetAttributeData> mediaassetAttributes = this.mediaAssetReadPlatformService.retrieveMediaassetAttributesData(mediaId);
+         final List<MediaLocationData> mediaLocationData = this.mediaAssetReadPlatformService.retrievemediaAssetLocationdata(mediaId);
+         final List<EnumOptionData> status = this.planReadPlatformService.retrieveNewStatus();
+         final List<MediaassetAttribute> data = this.mediaAssetReadPlatformService.retrieveMediaAttributes();
+         final List<MediaassetAttribute> mediaFormat = this.mediaAssetReadPlatformService.retrieveMediaFormatType();
+         final List<MediaEnumoptionData> mediaTypeData = this.mediaAssetReadPlatformService.retrieveMediaTypeData();
+         final Collection<MCodeData> eventCategeorydata = this.mCodeReadPlatformService.getCodeValue("Event Category");
+         final List<McodeData> mediaCategeorydata = this.mediaAssetReadPlatformService.retrieveMedaiCategory();
+         final List<McodeData> mediaLanguageData = this.mediaAssetReadPlatformService.retrieveLanguageCategeories();
+         final List<McodeData> contentProviderData = this.mediaAssetReadPlatformService.retrieveContentProviders();
+         final MediaAssetData assetData = new MediaAssetData(mediaAssetData,mediaassetAttributes,mediaLocationData,status,data,mediaFormat,eventCategeorydata,mediaCategeorydata,mediaLanguageData,contentProviderData,mediaTypeData);
+         final ApiRequestJsonSerializationSettings settings = apiRequestParameterHelper.process(uriInfo.getQueryParameters());
+         return this.toApiJsonSerializer.serialize(settings, assetData, RESPONSE_DATA_PARAMETERS);
+    }
+	
+	@POST
+	@Consumes({ MediaType.APPLICATION_JSON })
+	@Produces({ MediaType.APPLICATION_JSON })
+	public String createMediaAssetData(final String apiRequestBodyAsJson) {
+
+		final CommandWrapper commandRequest = new CommandWrapperBuilder().createMediaAsset().withJson(apiRequestBodyAsJson).build();
+		final CommandProcessingResult result = this.commandsSourceWritePlatformService.logCommandSource(commandRequest);
+		return this.toApiJsonSerializer.serialize(result);
+	}
 	
 	@PUT
 	@Path("{assetId}")
 	@Consumes({ MediaType.APPLICATION_JSON })
 	@Produces({ MediaType.APPLICATION_JSON })
 	
-	public String assetEditData(@PathParam("assetId") final Long assetId,final String apiRequestBodyAsJson) {
+	public String updateMediaAssetData(@PathParam("assetId") final Long assetId, final String apiRequestBodyAsJson) {
 		
-		 final CommandWrapper commandRequest=new CommandWrapperBuilder().updateAsset(assetId).withJson(apiRequestBodyAsJson).build();
-		   final CommandProcessingResult result=this.commandsSourceWritePlatformService.logCommandSource(commandRequest);
-		   return this.toApiJsonSerializer.serialize(result);
+		final CommandWrapper commandRequest = new CommandWrapperBuilder().updateMediaAsset(assetId).withJson(apiRequestBodyAsJson).build();
+		final CommandProcessingResult result = this.commandsSourceWritePlatformService.logCommandSource(commandRequest);
+		return this.toApiJsonSerializer.serialize(result);
 	}
 	
-
 	@DELETE
 	@Path("{assetId}")
 	@Consumes({ MediaType.APPLICATION_JSON })
 	@Produces({ MediaType.APPLICATION_JSON })
-	public String deleteAssetData(@PathParam("assetId") final Long assetId,final String apiRequestBodyAsJson) {
+	public String deleteMediaAssetData(@PathParam("assetId") final Long assetId, final String apiRequestBodyAsJson) {
 		
-		 final CommandWrapper commandRequest=new CommandWrapperBuilder().deleteAsset(assetId).withJson(apiRequestBodyAsJson).build();
-		   final CommandProcessingResult result=this.commandsSourceWritePlatformService.logCommandSource(commandRequest);
-		   return this.toApiJsonSerializer.serialize(result);
+		final CommandWrapper commandRequest = new CommandWrapperBuilder().deleteMediaAsset(assetId).withJson(apiRequestBodyAsJson).build();
+		final CommandProcessingResult result = this.commandsSourceWritePlatformService.logCommandSource(commandRequest);
+		return this.toApiJsonSerializer.serialize(result);
 	}
 	
 	/**
@@ -309,11 +273,11 @@ public class MediaAssestApiResource {
 	@Path("locationAttributes/{assetId}")
 	@Consumes({ MediaType.APPLICATION_JSON })
 	@Produces({ MediaType.APPLICATION_JSON })
-	public String InsertMediaLocationsAndAttributes(@PathParam("assetId") final Long assetId,final String apiRequestBodyAsJson) {
+	public String createMediaLocationsAndAttributes(@PathParam("assetId") final Long assetId, final String apiRequestBodyAsJson) {
 
-	   final CommandWrapper commandRequest=new CommandWrapperBuilder().createMediaAssetLocationAttributes(assetId).withJson(apiRequestBodyAsJson).build();
-	   final CommandProcessingResult result=this.commandsSourceWritePlatformService.logCommandSource(commandRequest);
+	   final CommandWrapper commandRequest = new CommandWrapperBuilder().createMediaAssetLocationAttribute(assetId).withJson(apiRequestBodyAsJson).build();
+	   final CommandProcessingResult result = this.commandsSourceWritePlatformService.logCommandSource(commandRequest);
 	   return this.toApiJsonSerializer.serialize(result);
 	}
 	 	
-    }
+}
